fixes overflow bug, changes font size

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -19,7 +25,7 @@ code {
   width: 100vw;
   height: 100vh;
   background: linear-gradient(120deg, rgb(86, 175, 68), rgb(100, 208, 93));
-  z-index: -2;
+  overflow: hidden;
 }
 .food {
   font-size: 5em;
@@ -39,7 +45,6 @@ code {
   height: 100vh;
   outline: none;
   border: none;
-  font-size: 30em;
   background: none;
   margin: 0;
   padding: 0;
